# island

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json  plan.md  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
docs/: external-invoke-example.md  plugin-protocol.md
src/: App.vue  index.css  main.ts  typed-router.d.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: http_api.rs  lib.rs  tray.rs
src-tauri/src/plugins/: foreground.rs  mod.rs
src-tauri/src/plugins/favorite_selection/: db.rs  icon.rs  mod.rs
src-tauri/src/plugins/island_toggle/: mod.rs  shortcuts.rs
src/app/: index.ts  islandApp.ts  useIslandPrimaryColor.ts
src/components/: AppToast.vue  IslandContent.vue  IslandSettingsModal.vue  IslandView.vue  JsonSchemaForm.vue  MarqueeText.vue
src/composables/: useIslandPlugin.ts
src/plugins/: index.vue
src/plugins/favorite-selection/: README.md  config.ts  favorite-hud-window.ts
src/plugins/favorite-selection/components/: FavoriteList.vue
src/plugins/favorite-selection/composables/: useFavoriteSelectionPlugin.ts  useFavoriteSelectionSettings.ts
src/plugins/favorite-selection/pages/: hud.vue  index.vue
src/plugins/island-toggle/: DoneView.vue  IdleView.vue  RunningView.vue  config.ts
src/plugins/island-toggle/composables/: useIslandTogglePlugin.ts  useIslandToggleSettings.ts
src/router/: index.ts  meta.d.ts
src/state/: island.ts  islandQueue.ts
src/utils/: favorites-invoke.ts  island-route.ts  island-settings.ts  toast.ts
(+10 files in other folders)
