[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
base64 = "0.22.1"
image = "0.25.6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.57.0", features = [
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Dwm",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse"
] }

[dependencies.clipboard-rs]
version = "0.3.4"
